--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "modula-deeplink",
+	"name": "modula-nextgen-migrator",
 	"main": "Gruntfile.js",
 	"version": "1.0.0",
 	"author": "Macho Themes",
